tests/compile_errors/json/002_strict_add_field.xr
// 002_strict_add_field.xr
// 错误测试：严格类型不允许添加新字段
// 期望错误：类型 'Point' 不允许添加字段
type Point = { x: int, y: int }
let p: Point = { "x": 1, "y": 2 }
p.z = 3
